Adds more of the noise table and links to form

--- a/index.html
+++ b/index.html
@@ -35,30 +35,10 @@
 					<nav id="nav">
 						 <ul>
 							<li class="current"><a href="index.html">Home</a></li>
-							<!--
-							<li>
-								<a href="">Dropdown</a>
-								<ul>
-									<li><a href="#">Lorem dolor</a></li>
-									<li><a href="#">Magna phasellus</a></li>
-									<li><a href="#">Etiam sed tempus</a></li>
-									<li>
-										<a href="">Submenu</a>
-										<ul>
-											<li><a href="#">Lorem dolor</a></li>
-											<li><a href="#">Phasellus magna</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam nisl</a></li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a href="#">Veroeros feugiat</a></li>
-								</ul>
-							</li> -->
 							<li><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Noise in SF</a></li>
-							<li><a href="report.html">Report</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report</a></li>
 							<li><a href="resources.html">Resources</a></li>
 						</ul>
 					</nav>
@@ -68,46 +48,42 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>How does noise affect your life?</h2>
+					<h2>How does noise affect you?</h2>
 				</header>
 			</section>
+
+
 
 		<!-- Gigantic Heading -->
 			<section class="wrapper style2">
 				<div class="container">
 					<header class="major">
 						<h2>San Francisco is a noisy place</h2>
-						<p>Noise will always exist in the city, but how much is too much? Excessive noise has been proven to have serious negative health impacts for people. San Francisco has laws limiting noise, but they aren't always understood or enforced.</p>
+						<p>Cities are noisy, and urban noise has serious negative health impacts. How much noise is safe? San Francisco has laws limiting noise, but they often aren't understood, monitored, or enforced.</p>
 					</header>
 				</div>
 			</section>
 
-	<section class="wrapper style3">
+		<!-- CTA -->
+		<section id="cta" class="wrapper style3">
+			<div class="container">
+				<header>
+					<h2>Citizen noise complaints help the city react to noise. To file a noise complaint using our custom form, click the button below:</h2>
+				</header>
+				<a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform" class="button">Start</a>
+			</div>
+		</section>
+
+	<section class="wrapper style2">
 				<header class="major">
 					<h2>Get a detailed view of how and where noise affects residents.</h2>
 				</header>
 				<div class="container">
-					<div class="row">
-						<section class="6u 12u(narrower)">
 							<header>
-								<h3 class="map-title">Urban Noise Watch</h3>
-							</header>
-							
-							<div class="map">
-								<iframe border="0" name="SeeClickFix" title="SeeClickFix - Widget" width="100%" height="100%" src="http://en.seeclickfix.com/map_widgets/4921" scrolling="no" marginheight="0" frameborder="0" marginwidth="0" allowtransparency="true" hspace="0" vspace="0">
-								  <p>Your browser does not support iframes. Try it from <a href="http://seeclickfix.com" target="_blank">seeclickfix.com</a></p>
-							</iframe>
-
-							</div>
-						</section>
-						<section class="6u 12u(narrower)">
-							<header>
-								<h3 class="map-title">SF Noise Complaint Map</h3>
+								<h3 class="map-title">The map below shows the locations of noise complaints sent to the over the past few years to San Francisco Department of Public Health</h3>
 							</header>
 							<div class="map">
 								<iframe title="Noise-related Health Complaints" scrolling="no" id="787649560" name="787649560" allowtransparency="true" class="igm" src="//mj89sp3sau2k7lj1eg3k40hkeppguj6j-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=http://www.gstatic.com/sites-gadgets/iframe/iframe.xml&amp;container=enterprise&amp;view=default&amp;lang=en&amp;country=ALL&amp;sanitize=0&amp;v=9facd724e6dd3ac5&amp;libs=core&amp;mid=56&amp;parent=https://sites.google.com/a/thecivicengine.org/noisehurts/monitor/sf-noise-inspections#up_scroll=no&amp;up_iframeURL=https://www.google.com/fusiontables/embedviz?q%3Dselect%2Bcol1%2Bfrom%2B1RI56cP-SVL2mwQMxDp3G_vvI3am2p-bko5PqHjhS%26viz%3DMAP%26h%3Dfalse%26lat%3D37.78304433231928%26lng%3D-122.44005621361089%26t%3D1%26z%3D13%26l%3Dcol1%26y%3D4%26tmplt%3D5%26hml%3DONE_COL_LAT_LNG&amp;st=e%3DAIHE3cDPMK0He6AY%252FFB0AHh2WC8EImFP7UUzZFkiSo7F0jwIhGH%252FRBGxKSfIeX1aJldlvaO5pROF5%252BgM5EN7yJMbmVLq4NaA7BzzK9W8rw8zhB8%252B4nOtExeNk3MDruuqSByJb%252FUgXwYk%26c%3Denterprise&amp;rpctoken=-5664415064807702887" frameborder="0" height="100%" width="100%"></iframe>
-							</div>
-						</section>
 					</div>
 				</div>
 	</section>
@@ -124,7 +100,7 @@
 					<div class="row">
 						<section class="6u 12u(narrower)">
 							<div class="box post">
-								<a href="#" class="image left"><img src="images/med-icon.png" alt="" /></a>
+								<a href="impacts.html" class="image left"><img src="images/med-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3>Noise Impacts</h3>
 									<p>Learn how chronic exposure of noise can negatively effect human health.</p>
@@ -133,7 +109,7 @@
 						</section>
 						<section class="6u 12u(narrower)">
 							<div class="box post">
-								<a href="#" class="image left"><img src="images/law-icon.png" alt="" /></a>
+								<a href="laws.html" class="image left"><img src="images/law-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3>Noise Laws</h3>
 									<p>Learn about San Francisco's Noise Laws and how they affect citizens.</p>
@@ -144,7 +120,7 @@
 					<div class="row">
 						<section class="6u 12u(narrower)">
 							<div class="box post">
-								<a href="#" class="image left"><img src="images/traffic-icon.jpg" alt="" /></a>
+								<a href="noise.html" class="image left"><img src="images/traffic-icon.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Noise Sources and Solutions</h3>
 									<p>Noise comes from a lot of different places, and noise pollution can be addressed in many ways. Learn more here.</p>
@@ -153,7 +129,7 @@
 						</section>
 						<section class="6u 12u(narrower)">
 							<div class="box post">
-								<a href="#" class="image left"><img src="images/resources-icon.png" alt="" /></a>
+								<a href="resources.html" class="image left"><img src="images/resources-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3>Other Resources</h3>
 									<p>Click here for links to other noise resources, such as inexpensive noise monitor apps for your smartphone.</p>
@@ -161,16 +137,6 @@
 							</div>
 						</section>
 					</div>
-				</div>
-			</section>
-
-		<!-- CTA -->
-			<section id="cta" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Want to file a noise complaint? Use our simple complaint form!</h2>
-						<a href="report.html" class="button">Start</a>
-					</header>
 				</div>
 			</section>
 
