--- a/noise.html
+++ b/noise.html
@@ -47,59 +47,165 @@
 			</div>
 
 		<!-- Main -->
-			<section class="wrapper style1">
-				<div class="container">
-					<div id="content" class="noise-content">
+		<section class="wrapper style1">
+			<div class="container">
+				<div id="content" class="noise-content">
 
-						<!-- Content -->
+					<!-- Content -->
 
-							<article>
-								<header>
-									<h2>Noise in San Francisco</h2>
-									<p>Noise noise noise...</p>
-								</header>
+					<article>
+						<header>
+							<h2>Noise in San Francisco</h2>
+							<p>There are tons of noise sources in a city like San Francisco, and different ways to limit their negative impact on people. The table below gives some examples of common noise sources and solutions. </p>
+						</header>
+						<section class="wrapper style1">
+						<table class="noise-table">
+							  <thead>
+							    <td><h3>COMMON NOISE SOURCES</h3></td>
+							    <td><h3>SOLUTIONS FOR CITIES</h3></td>
+							  </thead>
+							  <tbody>
+								  <tr class="table-subtitle">
+								    <td colspan="2">BUSINESS NOISE</td>
+								  </tr>
+								  <tr>
+									<td>Early or late hours of operation; delivery vehicles; operation of machinery and tools.
+									</td>
+									<td>Implement zoning controls or use restrictions to limit conflicts between noisy businesses and noise-sensitive uses like schools or residences.
+									</td>
+								  </tr>
+								  <tr>
+									<td>Rooftop ventilation, air conditioning, or refrigeration equipment
+									</td>
+									<td><p>Require noise controls on machinery and equipment installed in buildings.</p>
+									<p>Enforce and monitor noise standards for building machinery.</p>
+									</td>
+								  </tr>	
+							  </tbody>
+							 <tbody>
+							  <tr class="table-subtitle">
+							    <td colspan="2">ENTERTAINMENT NOISE</td>
+							  </tr>
+							  <tr>
+								<td>Bars, restaurants, and clubs
+								</td>
+								<td><p>Require bars, restaurants, and clubs operating in evening hours to acoustically insulate their buildings</p>
+								<p>Limit hours of operation for bars, restaurants, and clubs.</p>
+								</td>
+							  </tr>
+							  <tr>
+								<td>Gatherings and events at stadiums and other outdoor venues.
+								</td>
+								<td>
+								<p>Require acoustical insulation for residences located near outdoor entertainment venues</p>
+								<p>Limit hours of operation  of outdoor entertainment venues</p>
+								</td>
+							  </tr>	
+							  </tbody>
+							  <tbody>
+								  <tr class="table-subtitle">
+								    <td colspan="2">CONSTRUCTION NOISE</td>
+								  </tr>
+								  <tr>
+									<td>Heavy construction equipment such as pile drivers bulldozers,  and trucks; powered equipment such as saws and jackhammers
+									</td>
+									<td>
+									<p>Monitor and enforce limits on the time of use of construction equipment</p>
+									<p>Require the use of quieter construction equipment
+									</p>
+									</td>
+								  </tr>
+							  </tbody>
+							  <tbody>
+								  <tr class="table-subtitle">
+								    <td colspan="2">ROAD TRAFFIC NOISE</td>
+								  </tr>
+								  <tr>
+									<td>Freeways, bus and truck routes, delivery vehicles
+									</td>
+									<td>
+									<p>Buffer residential areas from busy streets with sound walls or other sound barriers</p>
+									<p>Require acoustics insulation in residential buildings located near busy roadways
+									</p>
+									<p>Purchase quieter public vehicles
+									</p>
+									<p>Maintain street surfaces
+									</p>
+									<p>Limit vehicle speed, particularly for trucks
+									</p>
+									<p>Limit vehicle alarms and back up beepers
+									</p>
+									</td>
+								  </tr>
+								  <tr>
+									<td>Aftermarket motorcycle or car exhaust systems
+									</td>
+									<td>Enforcement of laws limiting motor vehicle exhaust noise
+									</td>
+								  </tr>
+								  <tr>
+									<td>Ambulances, fire engines, and other emergency response vehicles
+									</td>
+									<td>
+										<p>Require acoustical insulation in residential buildings near hospitals and emergency response facilities
+										</p>
+										<p>
+										Purchase quieter emergency response vehicles
+										</p>
+									</td>
+								  </tr>
+							  </tbody>
+							  <tbody>
+							  	<tr class="table-subtitle">
+								    <td colspan="2">TRAINS</td>
+								</tr>
+								<tr>
+									<td>Passenger and Freight Trains
+									</td>
+									<td>
+										<p>Maintain rail tracks</p>
+										<p>Limit train speed in residential areas
+										</p>
+										<p>Eliminate at grade crossing
+										</p>
+										<p>Require acoustics insulation in residential buildings near freeways and busy streets
+										</p>
+										<p>Build and operate new train lines below grade
+										</p>
+									</td>
+								  </tr>
+							  </tbody>
+							  <tbody>
+							  	<tr class="table-subtitle">
+								    <td colspan="2">PUBLIC SANITATION</td>
+								</tr>
+								<tr>
+									<td>Refuse collection and street maintenance vehicles
+									</td>
+									<td>
+										<p>Maintain rail tracks</p>
+										<p>Limit train speed in residential areas
+										</p>
+										<p>Eliminate at grade crossing
+										</p>
+										<p>Require acoustics insulation in residential buildings near freeways and busy streets
+										</p>
+										<p>Build and operate new train lines below grade
+										</p>
+									</td>
+								  </tr>
+							  </tbody>
 
-								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
-
-								<h2>Noise Sources</h2>
-								<p>Cities have many sources of noise; many of the more significant and preventable sources arise from traffic and industry. Motor vehicle traffic is usually the single greatest contributor of noise in most cities.</p>
-
-								<h4>Traffic</h4>
-
-								<p>Motor vehicle noise, including noise from automobiles, motorcycles, buses, and trains, is a result of  (1) vehicle traction systems including the engine, braking, exhaust (2) the interface of the wheel and the road or rail and (3) displacement of air, which is important at high speeds.</p>
-
-								<p>While modern vehicle are designed to limit noise, some people make illegal modifications to exhaust systems, which are designed to create obnoxious noise.</p>
-
-								<p>Traffic noise disproportionately affects residents living near highways and freight and transit routes A heavy truck will produce approximately twenty to thirty times more sound energy than a personal automobile.</p>
-
-								<p>Emergency response vehicles are problematic sources of noise for residents living near hospitals or police and fire stations. 
-								
-								<p>Public sanitation vehicles make loud noises when picking up or compacting refuse.</p>
-
-								<p>Alarms and back-up beepers are relatively new but highly obnoxious forms of traffic noise and are largely unregulated.</p>
-
-								<p>Traffic noise is not inevitable; cities can minimize traffic noise by maintaining roads, constructing sound barriers, reducing vehicle speeds, enforcing illegal vehicle modifications, carefully routing freight trucks, choosing electric buses, and increasing the use of public transit, bicycles, and walking.</p>
-
-								<h4>Industry</h4>
-
-								<p>Many noise complaints result from proximity of housing to businesses, industries, and institutional uses.</p>
-
-								<p>Residential-industrial noise conflicts arise from mechanical equipment, loading and unloading of delivery vehicles, heavy truck backup beepers, generators, and refrigeration equipment.</p>
-
-								<p>Mechanical ventilation systems, particularly those on rooftops can be a significant annoyance if there is an adjacent residential building that is higher.</p>
-
-								<p>Modern construction involves diesel powered heavy equipment, loud electric and pneumatics tools and frequent freight delivery.</p>
-
-								<p>Powered equipment, like gas powered leaf blowers used for property maintenance is a common source of noise annoyance.</p>
-
-								<p>Thoughtful planning and building rules and their strict enforcement can mitigate many noise conflicts.  Zoning codes can limit the incompatible proximal location of residential and commercial uses.  Building code can require acoustical insulation to keep sound inside bars and clubs and to keep living and sleeping areas quite while adequately ventilated.</p>
+						</table>
+						</section>
 
 
-							</article>
 
-					</div>
+					</article>
+
 				</div>
-			</section>
+			</div>
+		</section>
 
 
 		<!-- Footer -->
