--- a/resources.html
+++ b/resources.html
@@ -55,16 +55,13 @@
 
 							<article>
 								<header>
-									<h2>No Sidebar</h2>
-									<p>All content, all the time.</p>
+									<h2>Additional Resources</h2>
 								</header>
 
 								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-								<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-								Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-								Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-								consequat etiam lorem ipsum dolor sit amet nullam.</p>
+								<p> <a href="http://www.acoustic-glossary.co.uk/">Glossary of Terms Used in Noise Measurement and Control</a></p>
+								<p>This online resource explains the technical terms used in noise science.</p>
 
 								<h3>And Yet Another Subheading</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
