--- a/impacts.html
+++ b/impacts.html
@@ -35,28 +35,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						 <ul>
-							<li class="current"><a href="index.html">Home</a></li>
-							<!--
-							<li>
-								<a href="">Dropdown</a>
-								<ul>
-									<li><a href="#">Lorem dolor</a></li>
-									<li><a href="#">Magna phasellus</a></li>
-									<li><a href="#">Etiam sed tempus</a></li>
-									<li>
-										<a href="">Submenu</a>
-										<ul>
-											<li><a href="#">Lorem dolor</a></li>
-											<li><a href="#">Phasellus magna</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam nisl</a></li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a href="#">Veroeros feugiat</a></li>
-								</ul>
-							</li> -->
-							<li><a href="impacts.html">Impacts</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li  class="current"><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Noise in SF</a></li>
 							<li><a href="report.html">Report</a></li>
@@ -69,77 +49,34 @@
 		<!-- Main -->
 			<section class="wrapper style1">
 				<div class="container">
-					<div class="row 200%">
-						<div class="4u 12u(narrower)">
-							<div id="sidebar">
+					<div id="content" class="noise-content">
 
-								<!-- Sidebar -->
+						<!-- Content -->
 
-									<section>
-										<h3>Just a Subheading</h3>
-										<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-										Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-										Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-										<footer>
-											<a href="#" class="button">Continue Reading</a>
-										</footer>
-									</section>
+							<article>
+								<header>
+									<h2>Noise Impacts</h2>
+									<p>Noise noise noise...</p>
+								</header>
 
-									<section>
-										<h3>Another Subheading</h3>
-										<ul class="links">
-											<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-											<li><a href="#">Ornare in hendrerit in lectus</a></li>
-											<li><a href="#">Semper mod quis eget mi dolore</a></li>
-											<li><a href="#">Consequat etiam lorem phasellus</a></li>
-											<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-											<li><a href="#">Semper mod quisturpis nisi</a></li>
-										</ul>
-										<footer>
-											<a href="#" class="button">More Random Links</a>
-										</footer>
-									</section>
+								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-							</div>
-						</div>
-						<div class="8u  12u(narrower) important(narrower)">
-							<div id="content">
+								<p>Chronic exposure to elevated levels of community noise creates significant health risks.  These health impacts of noise depend on the intensity of noise, on the duration of exposure, and the context of exposure.</p>
 
-								<!-- Content -->
+								<p>Noise annoyance is defined as “a feeling of resentment, displeasure, discomfort, dissatisfaction, or offense when noise interferes with someone's thoughts, feelings, or actual activities”</p>
 
-									<article>
-										<header>
-											<h2>Left Sidebar</h2>
-											<p>Sidebar on the left, content on the right.</p>
-										</header>
+								<p>Moderate levels of noise can limit or interfere with the ability to conduct daily tasks and activity — to have an ordinary conversation, enjoy a leisure activities, rest, sleep, concentrate or get tasks done.</p>
 
-										<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+								<p>Noise from moderate levels of road traffic impairs cognitive functioning in children, including attention, concentration, sound discrimination, memory, and reading ability.  Some children exposed to moderate levels of road traffic noise develop deficits in reading ability and suffer lower school in school performance.</p>
 
-										<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-										Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-										Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-										consequat etiam lorem ipsum dolor sit amet nullam.</p>
+								<p>Noise interferes with sleep. Noise can make it difficult to fall asleep, and abrupt noises can cause awakenings, which the sleeper may not sense or recall.  Even at levels below which awakening may occur, noise produces measurable physiological reactions, such as increase in heart rate and body movements and can cause disturbances of natural sleep patterns by causing shifts from deep to lighter stages. People affected by noise may get up "tired" or "not rested" in the morning.</p> 
+								
+								<p>Noise is a biological stressor; it triggers autonomic chemical mechanisms for arousal and alertness. Consequentially, noise may cause or aggravate conditions related to chronic stress.</p>
 
-										<h3>And Yet Another Subheading</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-										justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-										ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-										vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-										Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-										rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-										Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-										Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+								<p>While evidence is not yet conclusive, exposure to higher levels road traffic noise is associated with higher a risk for myocardial infarction and exposure air traffic noise is  associated with hypertension.</p>
 
-										<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-										quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-										Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-										fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-										Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-										Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-									</article>
+							</article>
 
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
