--- a/laws.html
+++ b/laws.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Arcana by HTML5 UP</title>
+		<title>San Francisco Noise Watch</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -29,32 +29,12 @@
 			<div id="header">
 
 				<!-- Logo -->
-					<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+					<h1><a href="index.html" id="logo"><em>San Francisco</em> Noise Watch</a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
 						 <ul>
 							<li><a href="index.html">Home</a></li>
-							<!--
-							<li>
-								<a href="">Dropdown</a>
-								<ul>
-									<li><a href="#">Lorem dolor</a></li>
-									<li><a href="#">Magna phasellus</a></li>
-									<li><a href="#">Etiam sed tempus</a></li>
-									<li>
-										<a href="">Submenu</a>
-										<ul>
-											<li><a href="#">Lorem dolor</a></li>
-											<li><a href="#">Phasellus magna</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam nisl</a></li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a href="#">Veroeros feugiat</a></li>
-								</ul>
-							</li> -->
 							<li><a href="impacts.html">Impacts</a></li>
 							<li class="current"><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Noise in SF</a></li>
@@ -68,77 +48,32 @@
 		<!-- Main -->
 			<section class="wrapper style1">
 				<div class="container">
-					<div class="row 200%">
-						<div class="8u 12u(narrower)">
-							<div id="content">
+					<div id="content" class="noise-content">
 
-								<!-- Content -->
+						<!-- Content -->
 
-									<article>
-										<header>
-											<h2>Right Sidebar</h2>
-											<p>Sidebar on the right, content on the left.</p>
-										</header>
+							<article>
+								<header>
+									<h2>Noise Laws</h2>
+									<p>Noise noise noise...</p>
+								</header>
 
-										<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-										<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-										Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-										Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-										consequat etiam lorem ipsum dolor sit amet nullam.</p>
+								<h4>Federal Regulation</h4>
 
-										<h3>And Yet Another Subheading</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-										justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-										ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-										vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-										Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-										rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-										Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-										Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+								<p>At the national level, regulations limit the allowable sound levels produces by aircraft, railway and roadway vehicles and certain heavy equipment. For example, almost all aircraft in current operation must meet standards for runway takeoffs, landings, and sidelines, which depend on the aircraft's weight and its number of engines. US Federal Highway Standards limit the maximzxuzxm allowable noise emission level for a new heavy-duty truck is 80 dbA at 50 feet from the centerline of traffic. </p>
 
-										<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-										quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-										Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-										fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-										Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-										Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-									</article>
+								<p>Emissions standards have a number of shortcomings.   Emissions standards exit for only a minority of sources of noise; they may not apply to equipment already in use; and they do not address the problem of cumulative emissions. For example, emissions standards for new highway and railway construction and operation typically allow small incremental increases in noise levels.  Overtime, these permitted incremental increases become significant and health adverse.</p>
 
-							</div>
-						</div>
-						<div class="4u 12u(narrower)">
-							<div id="sidebar">
+								<h4>State and Local Regulation</h4>
 
-								<!-- Sidebar -->
+								<p>Thoughtful planning and building rules and their strict enforcement can mitigate many noise conflicts.  Zoning codes can limit the incompatible proximal location of residential and commercial uses.  Building code can require acoustical insulation to keep sound inside bars and clubs and to keep living and sleeping areas quite while adequately ventilated.</p>
 
-									<section>
-										<h3>Just a Subheading</h3>
-										<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-										Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-										Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-										<footer>
-											<a href="#" class="button">Continue Reading</a>
-										</footer>
-									</section>
+								<p>Enforcement of all noise laws is variable and often subjective. Even where laws exists, municipalities may not have sufficient or trained noise enforcement personnel, the ability to monitor noise compliance, or the willingness to pursue enforcement actions against noise transgressors. The table below details the current regulations on noise in San Francisco.</p>
 
-									<section>
-										<h3>Another Subheading</h3>
-										<ul class="links">
-											<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-											<li><a href="#">Ornare in hendrerit in lectus</a></li>
-											<li><a href="#">Semper mod quis eget mi dolore</a></li>
-											<li><a href="#">Consequat etiam lorem phasellus</a></li>
-											<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-											<li><a href="#">Semper mod quisturpis nisi</a></li>
-										</ul>
-										<footer>
-											<a href="#" class="button">More Random Links</a>
-										</footer>
-									</section>
+							</article>
 
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
