update to resources webpage

--- a/resources.html
+++ b/resources.html
@@ -63,27 +63,35 @@
 								<p> <a href="http://www.acoustic-glossary.co.uk/">Glossary of Terms Used in Noise Measurement and Control</a></p>
 								<p>This online resource explains the technical terms used in noise science.</p>
 							</div>
-							<div class="noise-resource">
-								<p> <a href="http://www.acoustic-glossary.co.uk/">Glossary of Terms Used in Noise Measurement and Control</a></p>
-								<p>This online resource explains the technical terms used in noise science.</p>
-							</div>
+
 							<div class="noise-resource">
 								<p> <a href="http://www.noisequest.psu.edu/noisebasics-metricsexistingprograms.html">Basics of Noise Metrics</a></p>
-								<p>This site provides an introduction to common noise pollution metrics.</p>
+								<p>This online resource provides an introduction to common noise pollution metrics.</p>
 							</div>
+
 							<div class="noise-resource">
-								<p> <a href="http://www.who.int/docstore/peh/noise/guidelines2.html">WHO Community Noise Standards</a></p>
+								<p> <a href="http://www.sf-planning.org/ftp/General_Plan/I6_Environmental_Protection.htm#ENV_TRA">San Francisco Transportation Noise Plan</a></p>
+								<p>Many of the adverse impacts of transportation noise can be limited through sound urban planning. The Transportation Noise Plan, which is part of the City's General Plan, lists city policies to reduce transporation nosie and its impacts on health and welfare. </p>
 							</div>
+
+							<div class="noise-resource">
+								<p> <a href="http://www.who.int/docstore/peh/noise/guidelines2.html">WHO Guidelines for Community Noise</a></p>
+								<p> The WHO Community Noise Guidelines consolidate scientific knowledge on the health impacts of community noise and provide community standards to protect people from the harmful effects of noise in non-industrial environments.</p> 
+							</div>
+
 							<div class="noise-resource">
 								<p> <a href="http://www.euro.who.int/en/health-topics/environment-and-health/noise/publications/2009/night-noise-guidelines-for-europe">WHO Night Noise Guidelines</a></p>
+								<p> The WHO Night Noise Guidelines for Europe review the health effects of exposure to night-time noise, examine dose–effect relations, and present interim and ultimate guideline values for exposure.</p>
 							</div>
+
 							<div class="noise-resource">
 								<p> <a href="http://www2.epa.gov/laws-regulations/summary-noise-control-act">U.S Noise Control Act</a></p>
 								<p>The U.S. Noise Control Act gave Federal agencies the authority to set standards on products that produce noise.  Since 1982, the EPA has not had funding to implement the Act.</p>
 							</div>
+
 							<div class="noise-resource">
 								<p> <a href="http://scitation.aip.org/content/asa/journal/jasa/135/4/10.1121/1.4865269">Evaluation of Mobile Phone Sound Measurement Apps</a></p>
-								<p>This paper from the Acoustical Society of America evaluated several iOS sound meter and found several to perform at a level adequate for noise monitoring and regulation.</p>
+								<p>This paper from the Acoustical Society of America describes the evaluation of sound level meters developed as mobile phone applications.</p>
 							</div>
 							
 						</article>
