--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>People shouldn't have to live with unhealthy noise</h2>
-						<p>Cities are naturally noisy, but urban noise has serious negative health impacts. How much noise is safe? Do you understand your city's noise laws? Are your city's noise laws strong enough? Are the laws being monitored and enforced?</p>
+						<p>Cities are naturally noisy, but urban noise has serious impacts on health. How much noise is safe? Do you understand your city's noise laws? Are your city's noise laws strong enough? Are the laws being monitored and enforced?</p>
 					</header>
 				</div>
 			</section>
@@ -117,7 +117,7 @@
 				</header>
 				<div class="container">
 							<header>
-								<h3 class="map-title">The map below shows locations of resident noise pollution reports made to the City of San Francisco and shared with SF Noise Watch. Click on a location to learn more about the report.</h3>
+								<h3 class="map-title">The map below shows locations of resident noise pollution reports made to the City of San Francisco. Click on a location to learn more about the report.</h3>
 							</header>
 							<div class="map">
 								<iframe id="map_canvas1" width="100%" height="100%" scrolling="no" frameborder="no" src="https://www.google.com/fusiontables/embedviz?q=select+col1+from+1RI56cP-SVL2mwQMxDp3G_vvI3am2p-bko5PqHjhS&amp;viz=MAP&amp;h=false&amp;lat=37.768865433858&amp;lng=-122.42254675316167&amp;t=1&amp;z=14&amp;l=col1&amp;y=6&amp;tmplt=7&amp;hml=ONE_COL_LAT_LNG"></iframe>
@@ -129,7 +129,7 @@
 		<section id="cta" class="wrapper style3">
 			<div class="container">
 				<header>
-					<h2>In order for the city to act, the citizens need to have their concerns heard. Do you have a noise concern? Use our noise pollution reporting tool to share your concerns with the city:</h2>
+					<h2>For cities to protect health, citizens need to have easy ways to share their noise experiences and concerns. Are you being negatively impacted by noise? Use our noise pollution reporting tool to share your concerns with the city:</h2>
 				</header>
 				<a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform" class="button start-button">Start</a>
 			</div>
@@ -137,7 +137,7 @@
 
 	<section class="wrapper style2">
 			<header class="major">
-				<h2>What happens to noise complaints?</h2>
+				<h2>What happens to your noise reports?</h2>
 			</header>
 			<div class="image-container">
 				<a class="image flow-chart"><img src="images/noise-report-flow-chart.png" alt="" /></a>
@@ -157,7 +157,7 @@
 								<a href="impacts.html" class="image left"><img src="images/health-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3><a href="impacts.html">Noise Impacts</a></h3>
-									<p>Learn how chronic exposure of noise can negatively effect human health.</p>
+									<p>Learn how chronic exposure to noise negatively impacts health.</p>
 								</div>
 							</div>
 						</section>
@@ -166,7 +166,7 @@
 								<a href="laws.html" class="image left"><img src="images/court.png" alt="" /></a>
 								<div class="inner">
 									<h3><a href="laws.html">Noise Laws</a></h3>
-									<p>Learn about San Francisco's Noise Laws and how they affect citizens.</p>
+									<p>Understand how San Francisco laws limit noise today.</p>
 								</div>
 							</div>
 						</section>
@@ -177,7 +177,7 @@
 								<a href="noise.html" class="image left"><img src="images/traffic-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3><a href="noise.html">Urban Noise Solutions</a></h3>
-									<p>Noise comes from a lot of different places, and noise pollution can be addressed in many ways. Learn more here.</p>
+									<p>Learn what cities might do to better control noise pollution.</p>
 								</div>
 							</div>
 						</section>
@@ -185,8 +185,8 @@
 							<div class="box post">
 								<a href="measurement.html" class="image left"><img src="images/speaker-icon.png" alt="" /></a>
 								<div class="inner">
-									<h3><a href="measurement.html">Taking a Noise Measurement</a></h3>
-									<p>Instructions on how to take a noise measurement using an inexpensive mobile phone app.</p>
+									<h3><a href="measurement.html">Take a Noise Measurement</a></h3>
+									<p>Try taking your own sound measurement using a mobile phone app.</p>
 								</div>
 							</div>
 						</section>
@@ -197,7 +197,7 @@
 								<a href="responsibilities.html" class="image left"><img src="images/law-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3><a href="responsibilities.html">Local Government Noise Responsibilities</a></h3>
-									<p>Learn which government agencies are responsible for different types of noise in San Francisco.</p>
+									<p>Learn which San Francisco agencies are responsible for controlling noise.</p>
 								</div>
 							</div>
 						</section>
@@ -206,7 +206,7 @@
 								<a href="resources.html" class="image left"><img src="images/resources-icon.png" alt="" /></a>
 								<div class="inner">
 									<h3><a href="resources.html">Additional Resources</a></h3>
-									<p>More information on noise standards and terms.</p>
+									<p>Find out more about noise and health.</p>
 								</div>
 							</div>
 						</section>
